--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -25,6 +25,6 @@ jobs:
           pip install pylint
       - name: Analysing the code with pylint
         run: |
-          pylint $(git ls-files '*.py')
+          pylint $(git ls-files '*.py' ) --errors-only --disable=E0401
   
 
