--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -20,11 +20,10 @@ jobs:
       - name: Install requirements
         run: |
           python -m pip install -r requirements.txt
-      - name: Install pylint
-        run: |
-          pip install pylint
       - name: Analysing the code with pylint
         run: |
           pylint $(git ls-files '*.py' ) --errors-only --disable=E0401
-  
-
+      - name: Launch Coverage
+        run: |
+          coverage run -m pytest
+          coverage report
